# strongswan

./: .gitignore  configure.ac
.github/: CODEOWNERS  copilot-instructions.md
.github/codeql/: empty.sarif
.github/workflows/: build-packages.yml  codeql.yml  pr-build-test.yml  sync-upstream.yml
packaging/rpm/: strongswan-sw.spec
src/charon-cmd/cmd/: cmd_connection.c  cmd_options.c
src/libcharon/: Makefile.am
src/libcharon/kernel/: kernel_ipsec.h
src/libcharon/plugins/dhcp/: dhcp_provider.c
src/libcharon/plugins/dhcp_inform/: Makefile.am  dhcp-inform.conf  dhcp_inform_db_provider.c  dhcp_inform_db_provider.h  dhcp_inform_plugin.c  dhcp_inform_plugin.h  dhcp_inform_provider.h  dhcp_inform_responder.c  dhcp_inform_responder.h  dhcp_inform_static_provider.c  dhcp_inform_static_provider.h  dhcp_inform_ts_provider.c  dhcp_inform_ts_provider.h
src/libcharon/plugins/kernel_netlink/: kernel_netlink_ipsec.c
src/libcharon/sa/: child_sa.c
src/libstrongswan/: Makefile.am
src/libstrongswan/database/: database.c  database.h
src/libstrongswan/ipsec/: ipsec_types.c  ipsec_types.h
src/libstrongswan/plugins/pgsql/: Makefile.am  pgsql.conf.sample  pgsql_database.c  pgsql_database.h  pgsql_plugin.c  pgsql_plugin.h
